gateway/1.2/modules/ROOT/pages/flex-local-shared-storage-config.adoc
= Configuring Shared Storage for Flex Gateway in Local Mode
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:page-mode: local

// intro and graphics for each option - linux, docker, k8s
include::gateway::partial$task-shared-storage-config.adoc[tags=intro1;intro2;icon-table;byb;linux;sample-config-all-intro]
// configure shared storage for Flex Gateway as a Linux Service
+
include::gateway::partial$task-shared-storage-config.adoc[tags=sample-config-all]

// configure shared storage for Flex Gateway in a Docker container
include::gateway::partial$task-shared-storage-config.adoc[tags=docker-intro]
+
include::partial$task-reg-run-flex-gateway.adoc[tags=start-command-local]
+
include::gateway::partial$task-shared-storage-config.adoc[tags=sample-config-all-intro]
+
include::gateway::partial$task-shared-storage-config.adoc[tags=sample-config-all]

//configure shared storage for Flex Gateway as an K8s Ingress Controller
include::gateway::partial$task-shared-storage-config.adoc[tags=k8s;sample-config-all-intro]

include::gateway::partial$task-shared-storage-config.adoc[tags=sample-config-all]

== See Also

* xref:gateway::flex-conn-shared-storage-config.adoc[Configuring Shared Storage for Flex Gateway in Connected Mode]
* xref:gateway::flex-local-configuration-reference-guide.adoc#shared-storage[Declarative Configuration Reference Guide]