gateway/1.5/modules/ROOT/pages/flex-local-shared-storage-config.adoc
= Configuring Shared Storage for Flex Gateway in Local Mode
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:page-mode: local

//TODO: IS THERE AN OPENSHIFT OPTION HERE?

// intro and graphics for each option - linux, docker, kubernetes
include::partial$task-shared-storage-config.adoc[tags=intro1;intro2;icon-table;byb;linux;sample-config-all-intro]
// configure shared storage for Flex Gateway as a Linux Service
+
include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

// configure shared storage for Flex Gateway in a Docker container
include::partial$task-shared-storage-config.adoc[tags=docker-intro]
+
include::partial$task-reg-run-flex-gateway.adoc[tags=start-command-local]
+
include::partial$task-shared-storage-config.adoc[tags=docker-config-file-step;sample-config-all-intro]
+
include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

//configure shared storage for Flex Gateway in a Kubernetes cluster
include::partial$task-shared-storage-config.adoc[tags=k8s;sample-config-all-intro]

include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

// TLS
include::partial$task-shared-storage-config.adoc[tags=tls-intro]

include::partial$task-shared-storage-config.adoc[tags=tls-sample-config]

include::partial$task-shared-storage-config.adoc[tags=tls-more-information]

== See Also

* xref:flex-conn-shared-storage-config.adoc[Configuring Shared Storage for Flex Gateway in Connected Mode]
* xref:flex-local-configuration-reference-guide.adoc#shared-storage[Declarative Configuration Reference]